--- a/styles4.css
+++ b/styles4.css
@@ -5,7 +5,9 @@ h1 {
   margin-top: 5px;
   font-weight: bold;
 }
-
+input {
+    margin-bottom: 20px; /* Adds 10 pixels of space below each input element */
+}
 .header {
   position: fixed;
   top: 0;
