--- a/style2.css
+++ b/style2.css
@@ -13,7 +13,7 @@ h1 {
   font-weight: bold;
 }
 input {
-    margin-bottom: 20px; /* Adds 10 pixels of space below each input element */
+    margin-bottom: 0px 20px; /* Adds 10 pixels of space below each input element */
 }
 
 .header {
