--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,9 @@ h1 {
   font-weight: bold;
 }
 input {
-    margin-bottom: 20px; /* Adds 10 pixels of space below each input element */
+    margin-bottom: 0px 20px; /* Adds 10 pixels of space below each input element */
 }
+
 .header {
   position: fixed;
   top: 0;
