--- a/styles4.css
+++ b/styles4.css
@@ -6,7 +6,7 @@ h1 {
   font-weight: bold;
 }
 input {
-    margin-bottom: 0px 20px; /* Adds 10 pixels of space below each input element */
+   padding: 0px 20px; /* Adds 10 pixels of space below each input element */
 }
 
 .header {
