--- a/style3.css
+++ b/style3.css
@@ -5,8 +5,8 @@
   margin: 0;
   font-weight: bold;
   }
-input {
-    padding: 0px 20px; /* Adds 10 pixels of space below each input element */
+.input {
+    padding: 10px 20px; /* Adds 10 pixels of space below each input element */
 }
 
   
