--- a/style3.css
+++ b/style3.css
@@ -6,10 +6,8 @@
   font-weight: bold;
   }
 .input {
-    padding: 10px 20px; /* Adds 10 pixels of space below each input element */
+    margin-bottom: 10px; /* Adds 10 pixels of space below each input element */
 }
-
-  
   .header {
     position: fixed;
     top: 0;
