--- a/styles4.css
+++ b/styles4.css
@@ -90,25 +90,25 @@ buttons {
 .buttons-1{
   color: rgb(6, 7, 7);
   font-size: 1.2em;
-  background: #ffffff;
+  background: #3a48cc;
   transition: 0.4s ease;
 }
 .buttons-2{
   color: rgb(6, 7, 7);
   font-size: 1.2em;
-  background: #ffffff;
+  background: #3a48cc;
   transition: 0.4s ease;
 }
 .buttons-3{
   color: rgb(6, 7, 7);
   font-size: 1.2em;
-  background: #ffffff;
+  background: #3a48cc;
   transition: 0.4s ease;
 }
 .buttons-4{
   color: rgb(6, 7, 7);
   font-size: 1.2em;
-  background: #ffffff;
+  background: #3a48cc;
   transition: 0.4s ease;
 }
 
